<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Abrahamic Books</string>
    <string name="title_activity_main">Abrahamic Books</string>
    <string name="package_name">com.aboss3b13.abrahamicbooks</string>
    <string name="custom_url_scheme">com.aboss3b13.abrahamicbooks</string>
    <string name="widget_daily_name">Daily Reading</string>
    <string name="widget_continue_name">Last Read</string>
    <string name="widget_shortcuts_name">Study Shortcuts</string>
    <string name="widget_notes_name">Study Notes</string>
    <string name="widget_quran_name">Quran Reader</string>
    <string name="widget_bible_name">Bible Reader</string>
    <string name="widget_hadith_name">Hadith Explorer</string>
    <string name="widget_search_name">Library Search</string>
    <string name="widget_notes_heading">Your notes</string>
    <string name="widget_notes_zero">0 NOTES</string>
    <string name="widget_notes_empty">Create a note in the app.\nIt will appear here.</string>
    <string name="widget_notes_open">OPEN ALL NOTES</string>
    <string name="widget_note_title_placeholder">Note title</string>
    <string name="widget_note_preview_placeholder">Note preview</string>
    <string name="widget_note_open_arrow">›</string>
</resources>
